Add API validation mode with DQ_INVALID_INPUT quarantine table
Every endpoint accepts ?validate=true|false (or loanservice.validation.mode=on).
In validation mode request inputs are checked (INPUT_* rules, 400 on failure),
returned records run through DataQualityValidator, and all violations are
persisted to DQ_INVALID_INPUT, readable via GET /api/data-quality/invalid-inputs.
Unknown keys now return 404 instead of 500.